--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-
-
 #Server configuration
 server.servlet.context-path=/women
 server.port=8083
+
+#Token configuration
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
 
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
