--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,15 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#logging configuration
-logging.level.org.springframework=WARN
-logging.level.com.zaxxer.hikari=WARN
-logging.level.root=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
+websocket.contextpath=/Esprit
+spring.integration.rsocket.client.uri = /app
+spring.rsocket.server.mapping-path = /women/Esprit
+ ###EMAIL###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ahlem.benfradj01@gmail.com
+spring.mail.password=jzbuzuwwdhsdwcko
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+ 
+ 
